added storage for reject offer; resolved comments